--- a/TP03MainProj/TP03MainProj.csproj
+++ b/TP03MainProj/TP03MainProj.csproj
@@ -1209,19 +1209,10 @@
     <Content Include="Content\Customer\images\timeline\Chinese\2024.webp" />
     <Content Include="Content\Customer\images\timeline\vietna\1975.webp" />
     <Content Include="Content\Customer\images\mig\jp1.avif" />
-    <Content Include="DataHandle\china\occupation.json" />
     <Content Include="DataHandle\china\population.json" />
-    <Content Include="DataHandle\china\religion.json" />
-    <Content Include="DataHandle\japan\occupation.json" />
     <Content Include="DataHandle\japan\population.json" />
-    <Content Include="DataHandle\korea\occupation.json" />
     <Content Include="DataHandle\korea\population.json" />
-    <Content Include="DataHandle\korea\religion.json" />
-    <Content Include="DataHandle\philipines\occupation.json" />
     <Content Include="DataHandle\philipines\population.json" />
-    <Content Include="DataHandle\philipines\religion.json" />
-    <Content Include="DataHandle\vietnam\religion.json" />
-    <Content Include="DataHandle\vietnam\occupation.json" />
     <Content Include="DataHandle\vietnam\population.json" />
     <Content Include="DataHandle\china\age_distrbution.json" />
     <Content Include="DataHandle\japan\age_distrbution.json" />
@@ -1233,6 +1224,16 @@
     <Content Include="Content\PopulationData\japanese_population.json" />
     <Content Include="Content\PopulationData\korean_population.json" />
     <Content Include="Content\PopulationData\vietnamese_population.json" />
+    <Content Include="DataHandle\china\occupation.json" />
+    <Content Include="DataHandle\china\religion.json" />
+    <Content Include="DataHandle\japan\occupation.json" />
+    <Content Include="DataHandle\japan\religion.json" />
+    <Content Include="DataHandle\korea\occupation.json" />
+    <Content Include="DataHandle\korea\religion.json" />
+    <Content Include="DataHandle\philipines\occupation.json" />
+    <Content Include="DataHandle\philipines\religion.json" />
+    <Content Include="DataHandle\vietnam\occupation.json" />
+    <Content Include="DataHandle\vietnam\religion.json" />
     <None Include="Properties\PublishProfiles\cultmelboune - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-3.7.1.intellisense.js" />
     <Content Include="Scripts\index.global.js" />
