--- a/TP03MainProj/Web.config
+++ b/TP03MainProj/Web.config
@@ -19,6 +19,20 @@
     <httpRuntime targetFramework="4.8" />
   </system.web>
   <system.webServer>
+	  <httpCompression>
+		  <scheme name="gzip" dll="%Windir%\system32\inetsrv\gzip.dll" />
+		  <dynamicTypes>
+			  <add mimeType="text/*" enabled="true" />
+			  <add mimeType="message/*" enabled="true" />
+			  <!-- Other mime types -->
+		  </dynamicTypes>
+		  <staticTypes>
+			  <add mimeType="text/*" enabled="true" />
+			  <add mimeType="message/*" enabled="true" />
+			  <!-- Other mime types -->
+		  </staticTypes>
+	  </httpCompression>
+	  <urlCompression doStaticCompression="true" doDynamicCompression="true" />
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
@@ -27,6 +41,7 @@
     </handlers>
     <staticContent>
       <mimeMap fileExtension=".webp" mimeType="image/webp" />
+	  <clientCache cacheControlMaxAge="30.00:00:00" cacheControlMode="UseMaxAge"/>
 	</staticContent>
   </system.webServer>
   <connectionStrings>
