--- a/TP03MainProj/TP03MainProj.csproj
+++ b/TP03MainProj/TP03MainProj.csproj
@@ -252,17 +252,64 @@
     <Content Include="Content\Images\chinese\7.jpg" />
     <Content Include="Content\Images\chinese\8.jpg" />
     <Content Include="Content\Images\chinese\9.jpg" />
+    <Content Include="Content\Images\events\Aomori Nebuta Festival.jpg" />
+    <Content Include="Content\Images\events\Baekjung.jpg" />
     <Content Include="Content\Images\events\Buddha%27s Birthday.jpg" />
+    <Content Include="Content\Images\events\Chichibu Yomatsuri.jpg" />
+    <Content Include="Content\Images\events\Chilseok.jpg" />
     <Content Include="Content\Images\events\Chinese New Year.jpeg" />
+    <Content Include="Content\Images\events\Chopail.jpg" />
+    <Content Include="Content\Images\events\Chuseok.jpg" />
+    <Content Include="Content\Images\events\Daeboreum.jpg" />
+    <Content Include="Content\Images\events\Dano.jpeg" />
+    <Content Include="Content\Images\events\Dinagyang Festival.jpg" />
+    <Content Include="Content\Images\events\Dongji.jpg" />
     <Content Include="Content\Images\events\Double Ninth Festival.jpg" />
     <Content Include="Content\Images\events\Double Seventh Festival.jpg" />
     <Content Include="Content\Images\events\Dragon Boat Festival.jpg" />
+    <Content Include="Content\Images\events\Giant Lantern Festival.jpg" />
+    <Content Include="Content\Images\events\Giong Festival.jpg" />
+    <Content Include="Content\Images\events\Hansik.jpg" />
+    <Content Include="Content\Images\events\Hung King Temple Festival.jpg" />
+    <Content Include="Content\Images\events\Japan Festival 2024.jpg" />
+    <Content Include="Content\Images\events\Jungu.jpg" />
+    <Content Include="Content\Images\events\Kaamulan Festival.jpg" />
+    <Content Include="Content\Images\events\Kadayawan Festival.jpg" />
+    <Content Include="Content\Images\events\Karatsu Kunchi Festival.jpg" />
+    <Content Include="Content\Images\events\Kate Festival.jpg" />
+    <Content Include="Content\Images\events\Korean Festival.jpg" />
+    <Content Include="Content\Images\events\Kyoto Gion Matsuri.jpg" />
     <Content Include="Content\Images\events\Laba Festival.jpg" />
+    <Content Include="Content\Images\events\Lim Festival.jpg" />
     <Content Include="Content\Images\events\Lunar New Year and Lantern Festival.jpg" />
+    <Content Include="Content\Images\events\Masskara Festival.jpg" />
     <Content Include="Content\Images\events\Melbourne Lunar New Year Dragon Boat Festival 2024.jpg" />
+    <Content Include="Content\Images\events\Melbourne Sake Festival.jpg" />
+    <Content Include="Content\Images\events\Meoseumnal.jpg" />
     <Content Include="Content\Images\events\Mid-autumn Festival.jpg" />
+    <Content Include="Content\Images\events\Moriones Festival.jpg" />
+    <Content Include="Content\Images\events\Pahiyas Festival.jpg" />
+    <Content Include="Content\Images\events\Panagbenga Festival.jpg" />
+    <Content Include="Content\Images\events\Perfume Pagoda Festival.jpg" />
+    <Content Include="Content\Images\events\Pintados Festival.jpg" />
     <Content Include="Content\Images\events\Qingming Festival.jpg" />
+    <Content Include="Content\Images\events\Sambok.jpg" />
+    <Content Include="Content\Images\events\Samjinnal.jpg" />
+    <Content Include="Content\Images\events\Sangdalgosa.jpg" />
+    <Content Include="Content\Images\events\Sapporo snow.jpeg" />
+    <Content Include="Content\Images\events\Sendai Tanabata Matsuri.jpg" />
+    <Content Include="Content\Images\events\Seolla.jpg" />
+    <Content Include="Content\Images\events\Seotdal Geumeum.jpg" />
+    <Content Include="Content\Images\events\Sinulog Festival.jpg" />
+    <Content Include="Content\Images\events\Sondolpoong.jpg" />
+    <Content Include="Content\Images\events\Tenjin Matsuri.jpg" />
+    <Content Include="Content\Images\events\Tokushima Awa Odori.jpg" />
+    <Content Include="Content\Images\events\Ube Festival Queen Victoria Market.png" />
+    <Content Include="Content\Images\events\Vietnamese Ghost Festival.jpg" />
+    <Content Include="Content\Images\events\Vietnamese Lunar New Year.jpeg" />
     <Content Include="Content\Images\events\Winter Solstice.png" />
+    <Content Include="Content\Images\events\Yeongdeungje.jpg" />
+    <Content Include="Content\Images\events\Yudu.jpg" />
     <Content Include="Content\Images\filipino\1.jpg" />
     <Content Include="Content\Images\filipino\2.jpg" />
     <Content Include="Content\Images\filipino\3.jpg" />
@@ -1311,6 +1358,9 @@
     <Content Include="Content\Quizzes\chinese_cult_quiz.json" />
     <Content Include="Content\Quizzes\vietnamese_cult_quiz.json" />
     <Content Include="Content\Quizzes\japanese_cult_quiz.json" />
+    <Content Include="Content\Images\events\Hakata Dontaku Matsuri.webp" />
+    <Content Include="Content\Images\events\Ati-Atihan Festival.webp" />
+    <Content Include="Content\Images\events\2024 Moon Festival.webp" />
     <None Include="Properties\PublishProfiles\cultmelboune - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-3.7.1.intellisense.js" />
     <Content Include="Scripts\index.global.js" />
