--- a/TP03MainProj.Tests/packages.config
+++ b/TP03MainProj.Tests/packages.config
@@ -1,10 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.AspNet.Mvc" version="4.0.20505.0" targetFramework="net48" />
+  <package id="Castle.Core" version="5.1.1" targetFramework="net48" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.9" targetFramework="net48" />
   <package id="Microsoft.AspNet.Razor" version="3.2.9" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.9" targetFramework="net48" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.1" targetFramework="net48" />
+  <package id="Moq" version="4.20.70" targetFramework="net48" />
   <package id="MSTest.TestAdapter" version="1.2.0" targetFramework="net48" />
   <package id="MSTest.TestFramework" version="1.2.0" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
 </packages>
