--- a/TP03MainProj/packages.config
+++ b/TP03MainProj/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net48" />
   <package id="bootstrap" version="5.2.3" targetFramework="net48" />
+  <package id="Castle.Core" version="5.1.1" targetFramework="net48" />
   <package id="CsvHelper" version="31.0.3" targetFramework="net48" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net48" />
   <package id="jQuery" version="3.7.1" targetFramework="net48" />
@@ -23,6 +24,7 @@
   <package id="Microsoft.Web.Infrastructure" version="2.0.1" targetFramework="net48" />
   <package id="Modernizr" version="2.8.3" targetFramework="net48" />
   <package id="Moment.js" version="2.30.1" targetFramework="net48" />
+  <package id="Moq" version="4.20.70" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net48" />
   <package id="System.Buffers" version="4.4.0" targetFramework="net48" />
   <package id="System.Memory" version="4.5.0" targetFramework="net48" />
